Added scaffolding for product recommentation application.

--- a/AdaptiveProductRecommendationEngine/AdaptiveProductRecommendationEngine.csproj
+++ b/AdaptiveProductRecommendationEngine/AdaptiveProductRecommendationEngine.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="AdapterGroups\" />
+    <Folder Include="Adapters\" />
+    <Folder Include="Common\" />
+    <Folder Include="VariationParameters\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AdaptiveComputingFrameworkCore" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
