--- a/XOSkinWebApp/XOSkinWebApp.csproj
+++ b/XOSkinWebApp/XOSkinWebApp.csproj
@@ -27,11 +27,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AdaptiveProductRecommendationEngine\AdaptiveProductRecommendationEngine.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ScaffoldTemp\" />
   </ItemGroup>
 
 </Project>
