ASP.NET Indentity integration. Mostly on authentication.

--- a/XOSkinWebApp/XOSkinWebApp.csproj
+++ b/XOSkinWebApp/XOSkinWebApp.csproj
@@ -37,4 +37,8 @@
     <ProjectReference Include="..\AdaptiveProductRecommendationEngine\AdaptiveProductRecommendationEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ScaffoldingTemp\" />
+  </ItemGroup>
+
 </Project>
