--- a/XOSkinWebApp/XOSkinWebApp.csproj
+++ b/XOSkinWebApp/XOSkinWebApp.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\AdaptiveProductRecommendationEngine\AdaptiveProductRecommendationEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ORM\" />
+  </ItemGroup>
+
 </Project>
