--- a/XOSkinWebApp/XOSkinWebApp.csproj
+++ b/XOSkinWebApp/XOSkinWebApp.csproj
@@ -38,6 +38,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore" Version="5.0.2" />
     <PackageReference Include="SendGrid" Version="9.24.1" />
+    <PackageReference Include="ServiceStack.Text" Version="5.12.0" />
     <PackageReference Include="ShopifySharp" Version="5.12.0" />
   </ItemGroup>
 
