Pulling carrier ids and names from ShipEngine API and displaying selection on checkout page.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -17,6 +17,8 @@
     "ShopifyStoreFrontAccessToken": "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",
     "ShopifyYourFaceCollectionId": "275150831767",
     "ShopifyYourEyesCollectionId": "275150962839",
-    "ShopifyYourLipsAndSmileCollectionId": "275150995607"
+    "ShopifyYourLipsAndSmileCollectionId": "275150995607",
+    "ShipEngineApiKey": "TEST_/v5/X1MzjnycHjwupHJ0R+CgFYQ+bmzsL15xQ+3aJIM",
+    "ShipEngineCarriersUrl": "https://api.shipengine.com/v1/carriers"
   }
 }
