Added shipping charge calculations and user interface modifications to accomodate it.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -19,6 +19,7 @@
     "ShopifyYourEyesCollectionId": "275150962839",
     "ShopifyYourLipsAndSmileCollectionId": "275150995607",
     "ShipEngineApiKey": "TEST_/v5/X1MzjnycHjwupHJ0R+CgFYQ+bmzsL15xQ+3aJIM",
-    "ShipEngineCarriersUrl": "https://api.shipengine.com/v1/carriers"
+    "ShipEngineCarriersUrl": "https://api.shipengine.com/v1/carriers",
+    "ShipEngineShippingCostUrl": "https://api.shipengine.com/v1/rates"
   }
 }
