Shipping cost calculation work completed. Checkout controller configuration strings externalized.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -20,6 +20,17 @@
     "ShopifyYourLipsAndSmileCollectionId": "275150995607",
     "ShipEngineApiKey": "TEST_/v5/X1MzjnycHjwupHJ0R+CgFYQ+bmzsL15xQ+3aJIM",
     "ShipEngineCarriersUrl": "https://api.shipengine.com/v1/carriers",
-    "ShipEngineShippingCostUrl": "https://api.shipengine.com/v1/rates"
+    "ShipEngineShippingCostUrl": "https://api.shipengine.com/v1/rates",
+    "ShipEngineGetShipmentCostFromIdPrefixUrl": "https://api.shipengine.com/v1/shipments/",
+    "ShipEngineGetShipmentCostFromIdPostfixUrl": "/rates",
+    "ShipEngineDefaultCarrier": "se-750817",
+    "ShipEngineDefaultCarrierName": "USPS Priority Mail",
+    "ShipEngineDefaultRateType": "shipment",
+    "ShipEngineDefaultPackageType": "package",
+    "ShipEngineDefaultServiceCode": "usps_priority_mail",
+    "ShopifyShippingLineTitle": "USPS Priority Mail Shipping",
+    "ShopifyShippingLineCode": "USPS Priority Mail",
+    "ShopifyShippingLineSource": "ShipEngine, Stamps.com",
+    "ShopifyOrderStatusUrl": "https://xoskinqatest.azurewebsites.net/Orders/Detail/"
   }
 }
