Protected fields used to calculate shipping after it has been calculated.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -13,11 +13,17 @@
   },
   "AllowedHosts": "*",
   "Settings": {
+    // Shopify.
     "ShopifyUrl": "xoskincarecorp.myshopify.com",
     "ShopifyStoreFrontAccessToken": "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",
     "ShopifyYourFaceCollectionId": "275150831767",
     "ShopifyYourEyesCollectionId": "275150962839",
     "ShopifyYourLipsAndSmileCollectionId": "275150995607",
+    "ShopifyShippingLineTitle": "USPS Priority Mail Shipping",
+    "ShopifyShippingLineCode": "USPS Priority Mail",
+    "ShopifyShippingLineSource": "ShipEngine, Stamps.com",
+    "ShopifyOrderStatusUrl": "https://xoskinqatest.azurewebsites.net/Orders/Detail/",
+    // Ship Engine.
     "ShipEngineApiKey": "TEST_/v5/X1MzjnycHjwupHJ0R+CgFYQ+bmzsL15xQ+3aJIM",
     "ShipEngineCarriersUrl": "https://api.shipengine.com/v1/carriers",
     "ShipEngineShippingCostUrl": "https://api.shipengine.com/v1/rates",
@@ -27,10 +33,8 @@
     "ShipEngineDefaultCarrierName": "USPS Priority Mail",
     "ShipEngineDefaultRateType": "shipment",
     "ShipEngineDefaultPackageType": "package",
-    "ShipEngineDefaultServiceCode": "usps_priority_mail",
-    "ShopifyShippingLineTitle": "USPS Priority Mail Shipping",
-    "ShopifyShippingLineCode": "USPS Priority Mail",
-    "ShopifyShippingLineSource": "ShipEngine, Stamps.com",
-    "ShopifyOrderStatusUrl": "https://xoskinqatest.azurewebsites.net/Orders/Detail/"
+    "ShipEngineDefaultServiceCode": "usps_priority_mail"
+    // Avalara AvaTax.
+    // ...
   }
 }
