--- a/XOSkinWebApp/XOSkinWebApp.csproj
+++ b/XOSkinWebApp/XOSkinWebApp.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="SendGrid" Version="9.24.1" />
     <PackageReference Include="ServiceStack.Text" Version="5.12.0" />
     <PackageReference Include="ShopifySharp" Version="5.12.0" />
+    <PackageReference Include="Stripe.net" Version="39.66.0" />
   </ItemGroup>
 
   <ItemGroup>
