--- a/XOSkinWebApp/XOSkinWebApp.csproj
+++ b/XOSkinWebApp/XOSkinWebApp.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="ServiceStack.Text" Version="5.12.0" />
     <PackageReference Include="ShopifySharp" Version="5.12.0" />
     <PackageReference Include="Stripe.net" Version="39.67.0" />
+    <PackageReference Include="TaxJar" Version="3.3.1" />
   </ItemGroup>
 
   <ItemGroup>
