Commencement of label url retrieval from ShipEngine code.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -32,6 +32,7 @@
     "ShipEngineDefaultRateType": "shipment",
     "ShipEngineDefaultPackageType": "package",
     "ShipEngineDefaultServiceCode": "usps_priority_mail",
+    "ShipEngineGetLabelUrlFromIdUrl": "https://api.shipengine.com/v1/labels/shipment/",
     // TaxJar.
     "TaxJarApiKey": "29cfd88c7e9eccb91a6089f604968dcc",
     "TaxJarSkinCareProductTaxCode": "51241200A0002",
