Completed about 90% of order-fulfillment-related work.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -33,6 +33,9 @@
     "ShipEngineDefaultPackageType": "package",
     "ShipEngineDefaultServiceCode": "usps_priority_mail",
     "ShipEngineGetLabelUrlFromIdUrl": "https://api.shipengine.com/v1/labels/rates/",
+    // Stamps.com
+    "TrackingCompany":  "Stamps.com",
+    "StampsDotComPackageTrackingUrl": "https://www.stamps.com/shipstatus/?confirmation=",
     // TaxJar.
     "TaxJarApiKey": "29cfd88c7e9eccb91a6089f604968dcc",
     "TaxJarSkinCareProductTaxCode": "51241200A0002",
