CLOC-related changes.

--- a/XOSkinWebApp/XOSkinWebApp.csproj
+++ b/XOSkinWebApp/XOSkinWebApp.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-XOSkinWebApp-28325F0B-31B7-4969-B47E-DDCBCE25EEFD</UserSecretsId>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
