Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,4 @@ steps:
 - task: cloc@1
   inputs:
     clocCliDownloadUrl: 'https://github.com/AlDanial/cloc/releases/download/1.82/cloc-1.82.exe'
-    arguments: 
+    arguments: XO/XOSkinWebApp/
