Discount code and coupon customer-facing UI.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -11,6 +11,12 @@
   },
   "AllowedHosts": "*",
   "Settings": {
+    // Services Enabled.
+    "ShipEngineEnabled": true,
+    "TaxJarEnabled": false,
+    "ShopifyEnabled": true,
+    "StripeEnabled": true,
+    "SendGridEnabled": true,
     // Shopify.
     "ShopifyUrl": "xoskincarecorp.myshopify.com",
     "ShopifyStoreFrontAccessToken": "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",
