Continued commenting order placement function, prior to refactor/optimization.

--- a/XOSkinWebApp/appsettings.json
+++ b/XOSkinWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=xoskinapp;Password=qu3rtY8085:;Initial Catalog=XOSkin;Server=SIR-GALAHAD;MultipleActiveResultSets=true"
+    "DefaultConnection": "User ID=xoskinapp;Password=qu3rtY8085:;Initial Catalog=XOSkin;Server=SIR-GALAHAD/MSSQLSERVER_DEV;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
